--- a/style.css
+++ b/style.css
@@ -203,3 +203,12 @@ span{
     margin: 1rem 0;
     resize: none;
 }
+
+.footer{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 40px 0;
+    background-color: black;
+    
+}
