--- a/style.css
+++ b/style.css
@@ -209,6 +209,6 @@ span{
     bottom: 0;
     width: 100%;
     padding: 40px 0;
-    background-color: black;
-    
+    /* background-color: black; */
+
 }
