--- a/style.css
+++ b/style.css
@@ -209,6 +209,55 @@ span{
     bottom: 0;
     width: 100%;
     padding: 40px 0;
-    /* background-color: black; */
-
+    background-color: purple;
+}
+.footer .social{
+    text-align: center;
+    padding-bottom: 25px;
+    color: white;
+}
+.footer .social img{
+    font-size: 24px;
+    color: white;
+    border: 2px solid purple;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 8px;
+    box-shadow: inset 0 0 5px black, 0 0 5px black;
+    transition: 0.3s ease;
+}
+.footer .social img:hover{
+    transform: scale(1.2)translateY(-10px);
+    color: black;
+    border: 2px solid black;
+}
+.footer ul{
+    margin-top: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+.footer ul li a{
+    border-bottom: 3px solid transparent;
+    color: black;
+    transition: 0.3s ease;
+}
+.footer ul li a:hover{
+    border-bottom: 3px solid black;
+}
+.footer ul li{
+    display: inline-block;
+    padding: 0 15px;
+}
+.footer .copyright{
+    margin-top: 15px;
+    text-align: center;
+    font-size: 12px;
+    color: white;
 }
